first commit after new domain name

--- a/index.html
+++ b/index.html
@@ -1,11 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Professional Profile</title>
+    <link rel="stylesheet" href="css/style.css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Nunito:ital@0;1&display=swap" rel="stylesheet">
 </head>
+
 <body>
-    This is a test
+
+    <button class="menu-toggle">
+        <span class="hamburger-container">
+            <span class="hamburger"></span>
+        </span>
+        <span class="menu-text">MENU</span>
+    </button>
+
+    <header>    
+        <nav class="nav">
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="p1.html">Project Sample 1</a></li>
+                <li><a href="p2.html">Project Sample 2</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <main>
+
+        <div class="container">
+            <h1>DUSTY BUSBY</h1>
+            <h2> WEB DESIGNER </h2>
+        </div>    
+
+        <footer>
+            <p>Copyright 2024. Dusty Busby</p>
+        </footer>
+
+    </main>
+
+
+
+    <script src="js/script.js"></script>
 </body>
+
 </html>
