--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Professional Profile</title>
+    <title>Web Designer: Dusty Busby</title>
     <link rel="stylesheet" href="css/style.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -34,7 +34,7 @@
 
         <div class="container">
             <h1>DUSTY BUSBY</h1>
-            <h2> WEB DESIGNER </h2>
+            <h2>WEB DESIGNER</h2>
         </div>    
 
         <footer>
@@ -42,8 +42,6 @@
         </footer>
 
     </main>
-
-
 
     <script src="js/script.js"></script>
 </body>
