--- a/index.html
+++ b/index.html
@@ -20,28 +20,26 @@
         <span class="menu-text">MENU</span>
     </button>
 
-    <header>    
+    <header>
         <nav class="nav">
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="p1.html">Project Sample 1</a></li>
+                <li><a href="p-figma.html">Project: Figma-To-Dev</a></li>
                 <li><a href="p2.html">Project Sample 2</a></li>
             </ul>
         </nav>
     </header>
 
     <main>
-
         <div class="container">
-            <h1>DUSTY BUSBY</h1>
+            <h1 class="home-title">DUSTY BUSBY</h1>
             <div class="sun-effect"></div>
-            <h2>WEB DESIGNER</h2>
-        </div>    
+            <h2 class="home-subtitle">WEB DESIGNER</h2>
+        </div>
 
         <footer>
             <p>Copyright 2024. Dusty Busby</p>
         </footer>
-
     </main>
 
     <script src="js/script.js"></script>
