--- a/p-figma.html
+++ b/p-figma.html
@@ -34,11 +34,11 @@
         <h2 class="pfigma-description" id="image-description">Description for the first image.</h2>
         <div class="lightbox">
             <button class="arrow left" onclick="prevImage()">
-                <div class="arrow-indicator">
+                <span class="arrow-indicator">
                     <span></span>
                     <span></span>
                     <span></span>
-                </div>
+                </span>
             </button>
             <div class="image-container">
                 <img src="img/Figma-Project.png" alt="Figma Project Image 1" class="active" data-description="Figma-to-Dev: Initial design" onclick="toggleFullScreen(this)">
@@ -62,11 +62,11 @@
             </div>
             <div class="lightbox-instruction">Click image to enlarge</div>
             <button class="arrow right" onclick="nextImage()">
-                <div class="arrow-indicator">
+                <span class="arrow-indicator">
                     <span></span>
                     <span></span>
                     <span></span>
-                </div>
+                </span>
             </button>
         </div>
     </main>
