--- a/p-figma.html
+++ b/p-figma.html
@@ -33,7 +33,7 @@
         <h1 class="pfigma-title">The Handoff</h1>
         <h2 class="pfigma-description" id="image-description">Description for the first image.</h2>
         <div class="lightbox">
-            <button class="arrow left" onclick="prevImage()">
+            <button class="arrow left" tabindex="0" aria-label="Previous image">
                 <span class="arrow-indicator">
                     <span></span>
                     <span></span>
@@ -61,7 +61,7 @@
                 </div>
             </div>
             <div class="lightbox-instruction">Click image to enlarge</div>
-            <button class="arrow right" onclick="nextImage()">
+            <button class="arrow right" tabindex="0" aria-label="Next image">
                 <span class="arrow-indicator">
                     <span></span>
                     <span></span>
