--- a/p-figma.html
+++ b/p-figma.html
@@ -41,10 +41,10 @@
                 </span>
             </button>
             <div class="image-container">
-                <img src="img/Figma-Project.png" alt="Figma Project Image 1" class="active" data-description="Figma-to-Dev: Initial design" onclick="toggleFullScreen(this)">
-                <img src="img/placeholder2.jpg" alt="Placeholder 2" data-description="Placeholder 2: Conceptual model" onclick="toggleFullScreen(this)">
-                <img src="img/placeholder3.jpg" alt="Placeholder 3" data-description="Placeholder 3: User interface ideas" onclick="toggleFullScreen(this)">
-                <img src="img/placeholder4.jpg" alt="Placeholder 4" data-description="Placeholder 4: Final deliverable" onclick="toggleFullScreen(this)">
+                <img src="img/Figma-Project.png" alt="Figma Project Image 1" class="active" data-description="Figma-to-Dev: Initial design" tabindex="0" data-fullscreen="true">
+                <img src="img/placeholder2.jpg" alt="Placeholder 2" data-description="Placeholder 2: Conceptual model" tabindex="0" data-fullscreen="true">
+                <img src="img/placeholder3.jpg" alt="Placeholder 3" data-description="Placeholder 3: User interface ideas" tabindex="0" data-fullscreen="true">
+                <img src="img/placeholder4.jpg" alt="Placeholder 4" data-description="Placeholder 4: Final deliverable" tabindex="0" data-fullscreen="true">
             </div>
             <div class="lightbox-text">
                 <div class="text-content active" data-index="0">
