--- a/index.html
+++ b/index.html
@@ -24,10 +24,11 @@
         <nav class="nav">
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="p-figma.html">Project: Figma-To-Dev</a></li>
+                <li><a href="thehandoff.html">Project: The Handoff</a></li>
                 <li><a href="p2.html">Project Sample 2</a></li>
             </ul>
         </nav>
+
     </header>
 
     <main>
@@ -38,7 +39,7 @@
         </div>
 
         <footer>
-            <p>Copyright 2024. Dusty Busby</p>
+            <p>Copyright 2025. Dusty Busby</p>
         </footer>
     </main>
 
