--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="thehandoff.html">Project: The Handoff</a></li>
-                <li><a href="p2.html">Project Sample 2</a></li>
+                <li><a href="ai.html">Project: The AI Experience</a></li>
             </ul>
         </nav>
 
