--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
         <nav class="nav">
             <ul>
                 <li><a href="index.html">Home</a></li>
+                <li><a href="ai.html">Project: Coding with AI</a></li>
                 <li><a href="thehandoff.html">Project: The Handoff</a></li>
-                <li><a href="ai.html">Project: The AI Experience</a></li>
             </ul>
         </nav>
 
