--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="ai.html">Project: Coding with AI</a></li>
                 <li><a href="thehandoff.html">Project: The Handoff</a></li>
+                <li><a href="about.html">About</a></li>
             </ul>
         </nav>
 
@@ -36,6 +37,8 @@
             <h1 class="home-title">DUSTY BUSBY</h1>
             <div class="sun-effect"></div>
             <h2 class="home-subtitle">WEB DESIGNER</h2>
+            <p class="home-tagline">An AI Built This...But It Needed Me</p>
+            <a href="ai.html" class="home-link">Enter SkyNET to learn how</a>
         </div>
 
         <footer>
