--- a/thehandoff.html
+++ b/thehandoff.html
@@ -25,6 +25,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="ai.html">Project: Coding with AI</a></li>
                 <li><a href="thehandoff.html">Project: The Handoff</a></li>
+                <li><a href="about.html">About</a></li>
             </ul>
         </nav>
 
