--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <h1 class="home-title">DUSTY BUSBY</h1>
             <div class="sun-effect"></div>
             <h2 class="home-subtitle">WEB DESIGNER</h2>
-            <p class="home-tagline">An AI Built This...But It Needed Me</p>
+            <h2 class="home-tagline">An AI Built This...But It Needed Me</h2>
             <a href="ai.html" class="home-link">Enter SkyNET to learn how</a>
         </div>
 
